Update body overflow styling to fix Safari scroll issue

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -40,7 +40,7 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 ul {
